test/lexer/import-014-c.stderr
At: "import-014-c.hac":17:
parse error: syntax error
parser stacks:
state	value
#STATE#	(imported-root-list) [7:1--8:27]
#STATE#	(process-prototype) [10:1..48]
#STATE#	{ [11:1]
#STATE#	list<(def-body-item)>: (instance-decl) ... [12:2--13:15]
#STATE#	keyword: prs [16:2..4]
#STATE#	(null) 
#STATE#	{ [16:6]
#STATE#	(prs-literal) [17:3..5]
#STATE#	+ [17:6]
in state #STATE#, possible rules are:
	prs_literal : prs_literal_base . expr_list_in_angles_optional  (#RULE#)
	expr_list_in_angles_optional : .  (#RULE#)
acceptable tokens are: 
	'&' (reduce)
	'(' (reduce)
	')' (reduce)
	'<' (shift)
	'|' (reduce)
	'}' (reduce)
	IMPLIES (reduce)
	RARROW (reduce)
	HASH_ARROW (reduce)
