test/lexer/import-014-c.hac
// "import-014-c.hac"
// contributed by: Clint Kelly
// reduced by: David Fang
// purpose: testing bug fix in lexer's import mechanism
//	used to assert-fail during file-stack dump

import "import-014-a.hac";
import "import-014-b.hac";

defproc problem (e1of2 Din; e1of2 Dout; pbit pb)
{
	bool p = pb.t;
	bool _p = pb.f;

	// DEATH HERE on macro-like construct in prs
	prs {
		foo(_p, Din.e, Dout.e)
	}
}

